fix pu-icon mixin lost font-size; align token naming

--- a/packages/uniapp/src/styles/_mixins.scss
+++ b/packages/uniapp/src/styles/_mixins.scss
@@ -10,12 +10,16 @@
 
 /* Typography Mixin - uses CSS variables (composite token) */
 @mixin pu-font($key, $mono: false) {
-  font-size: var(--sys-font-#{$key}-size);
-  font-weight: var(--sys-font-#{$key}-weight);
-  line-height: var(--sys-font-#{$key}-line-height);
+  font-size: var(--sys-typo-#{$key}-size);
+  font-weight: var(--sys-typo-#{$key}-weight);
+  line-height: var(--sys-typo-#{$key}-line-height);
   @if $mono == true {
     font-family: var(--ref-font-family-mono);
   }
+}
+
+@mixin pu-font-size($key) {
+  font-size: var(--sys-typo-#{$key}-size);
 }
 
 /* Elevation (Shadow) Mixin - uses CSS variables */
